# hack-rfid

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run_cmake.sh  run_cmake_sim.sh
src/: acl.c  acl.h  main.c  mqtt.c  mqtt.h
src/sys/: fs.c  fs.h  fs_sim.c  lwipopts.h  rfid_reader.c  rfid_reader.h  sys.c  sys.h  wifi.c
src/sys/device/: mfrc522.c  mfrc522.h  relay.c  relay.h
tools/go_hasher/: main.go
